# allezone-analytics

./: .env  1.docker-compose.yaml  2.docker-compose.yaml  README.md  docker-compose.yaml  err.json
gateway/: .env  Cargo.toml  Dockerfile  Dockerfile.debug
gateway/src/: main.rs
gateway/src/routes/: mod.rs
gateway/src/routes/kv/: mod.rs
gateway/src/routes/kv/schemas/: AggregatesItem.avsc  UserTag.avsc
gateway/src/routes/store/: aerospike_store.rs  kafka_store.rs  mod.rs  postgres_store.rs
gateway/src/routes/store/schemas/: UserTag.avsc
pipeline/: .env  .gitignore  Dockerfile  pom.xml  run.sh
pipeline/src/main/avro/: AggregatesItem.avsc  AggregatesPrice.avsc
pipeline/src/main/java/aggregates/: AggregatesProcessor.java  AvroDeserializer.java  AvroSerializer.java  DataBase.java  Main.java
pipeline/src/main/java/allezone_analytics/: AggregatesItem.java  AggregatesPrice.java
pipeline/src/test/java/aggregates/: AppTest.java
schemas/: AggregatesItem.avsc
services/: aerospike.conf  convert.py  schema_registry.sh  set_schemas.sh
services/aerospike/: aerospike.conf  aerospike.conf.j2  aerospike1.conf  aerospike2.conf  hosts
services/kafka/: hosts  kafka.yaml
services/postgres/: Dockerfile  docker-compose.yaml  init.sql
services/prometheus/: prometheus.yml
streams.examples/: pom.xml
