[package]
name = "gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aerospike = "1.2.0"
anyhow = "1.0.70"
apache-avro = "0.14.0"
axum = "0.6.12"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
hex = "0.4.3"
itertools = "0.10.5"
once_cell = "1.17.1"
rdkafka = "0.29.0"
serde = { version = "1.0.159", features = ["rc"] }
tokio = { version = "1.27.0", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.4.0", features = ["trace", "add-extension"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter", "json"] }
utoipa = "3.2.1"

[features]
query-debug = []
